--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     </ul>
   </nav>
   <main>
-    <figure class="flex-container">
+    <div class="flex-container">
       <!-- show image tittle and button after hovering the image -->
-      <figure class="image">
+      <div class="image">
         <img src="images/1.jpg" alt="img">
         <figcaption>
           <h4>
@@ -47,25 +47,25 @@
               </i>
             </a>
         </figcaption>
-      </figure>
-      <figure class="image">
+      </div>
+      <div class="image">
         <img src="images/2.jpg" alt="img">
-      </figure>
-      <figure class="image">
+      </div>
+      <div class="image">
         <img src="images/3.jpg" alt="img">
-      </figure>
-      <figure class="image">
+      </div>
+      <div class="image">
         <img src="images/4.jpg" alt="img">
-      </figure>
-      <figure class="image">
+      </div>
+      <div class="image">
         <img src="images/5.jpg" alt="img">
-      </figure>
-      <figure class="image">
+      </div>
+      <div class="image">
         <img src="images/6.jpg" alt="img">
-      </figure>
-      <figure class="image">
+      </div>
+      <div class="image">
         <img src="images/7.jpg" alt="img">
-      </figure>
-    </figure>
+      </div>
+    </div>
   </main>
 </body>
