--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <main>
     <div class="flex-container">
       <!-- show image tittle and button after hovering the image -->
-      <div class="image">
+      <div class="flex-image">
         <img src="images/1.jpg" alt="img">
         <figcaption>
           <h4>
@@ -48,22 +48,22 @@
             </a>
         </figcaption>
       </div>
-      <div class="image">
+      <div class="flex-image">
         <img src="images/2.jpg" alt="img">
       </div>
-      <div class="image">
+      <div class="flex-image">
         <img src="images/3.jpg" alt="img">
       </div>
-      <div class="image">
+      <div class="flex-image">
         <img src="images/4.jpg" alt="img">
       </div>
-      <div class="image">
+      <div class="flex-image">
         <img src="images/5.jpg" alt="img">
       </div>
-      <div class="image">
+      <div class="flex-image">
         <img src="images/6.jpg" alt="img">
       </div>
-      <div class="image">
+      <div class="flex-image">
         <img src="images/7.jpg" alt="img">
       </div>
     </div>
