--- a/index.html
+++ b/index.html
@@ -3,69 +3,99 @@
   <link rel="stylesheet" href="main.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,500&display=swap" rel="stylesheet">
   <script defer src="scroll.js"></script>
 
 </head>
 
 <body>
   <nav class="navbar">
-    <header >
-      <a class="navbar-header" href="index.html">
+    <header>
+      <a class="navbar-header" href="/index.html">
         <h1>
           Simona Dumascu
         </h1>
         <h2>
           Character designer and Ilustrator
-        </h2>      
+        </h2>
       </a>
     </header>
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="index.html">Work</a>
+        <a class="nav-link" href="/index.html"><em>Work</em></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="about.html">About</a>
+        <a class="nav-link" href="/about.html">About me</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="contact.html">Contact</a>
+        <a class="nav-link" href="/contact.html">Contact</a>
       </li>
     </ul>
   </nav>
   <main>
-    <figure class="flex-container">
-      <!-- show image tittle and button after hovering the image -->
-      <figure class="image">
-        <img src="images/1.jpg" alt="img">
+    <div class="flex-container">
+      <div class="flex-image">
+        <img src="/images/character_design/8.jpg" alt="img">
+        <figcaption>
+          <h4>
+            Character design
+          </h4>
+          <p>
+            Collection of characters and illustrations in different styles and inspirations.
+          </p>
+          <a href="/work/character_design.html">
+            <i>
+              Show more
+            </i>
+          </a>
+        </figcaption>
+      </div>
+      <div class="flex-image">
+        <img src="/images/portraits/7.jpg" alt="img">
+        <figcaption>
+          <h4>
+            Portraits
+          </h4>
+          <p>
+            Sample of different commissions and personal work.          </p>
+          <a href="/work/portraits.html">
+            <i>
+              Show more
+            </i>
+          </a>
+        </figcaption>
+      </div>
+      <div class="flex-image">
+        <img src="/images/enviroment/11.jpg" alt="img">
+        <figcaption>
+          <h4>
+            Enviromental Art
+          </h4>
+          <p>
+            Design of enviromental art pieces and details.
+          </p>
+          <a href="/work/enviroment.html">
+            <i>
+              Show more
+            </i>
+          </a>
+        </figcaption>
+      </div>
+      <div class="flex-image">
+        <img src="/images/thesis/5.jpg" alt="img">
         <figcaption>
           <h4>
             Thesis
           </h4>
-            <a href="thesis.html" target="_blank">
-              <i>
-                View project
-              </i>
-            </a>
+          <p>
+            A character design interpretation of the main characters from the novel Dune
+          </p>
+          <a href="/work/thesis.html">
+            <i>
+              Show more
+            </i>
+          </a>
         </figcaption>
-      </figure>
-      <figure class="image">
-        <img src="images/2.jpg" alt="img">
-      </figure>
-      <figure class="image">
-        <img src="images/3.jpg" alt="img">
-      </figure>
-      <figure class="image">
-        <img src="images/4.jpg" alt="img">
-      </figure>
-      <figure class="image">
-        <img src="images/5.jpg" alt="img">
-      </figure>
-      <figure class="image">
-        <img src="images/6.jpg" alt="img">
-      </figure>
-      <figure class="image">
-        <img src="images/7.jpg" alt="img">
-      </figure>
-    </figure>
+      </div>
+    </div>
   </main>
 </body>
