--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
   <body>
     <nav class="navbar">
       <header >
-        <a class="navbar-header" href="/index.html">
+        <a class="navbar-header" href="index.html">
           <h1>
             Simona Dumascu
           </h1>
@@ -22,20 +22,20 @@
       </header>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="/index.html">Work</a>
+          <a class="nav-link" href="index.html">Work</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/about.html"><em>About me</em></a>
+          <a class="nav-link" href="about.html"><em>About me</em></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/contact.html">Contact</a>
+          <a class="nav-link" href="contact.html">Contact</a>
         </li>
       </ul>
     </nav>
     <main>
       <div class="flex-container">
         <div class="flex-info">
-          <img src="/images/simo.jpg" alt="img">
+          <img src="images/simo.jpg" alt="img">
         </div>
         <div class="flex-info">
           <h3>
@@ -50,7 +50,7 @@
             <!-- Motivated Illustrator and character design artist with a passion for story telling.
             Through my experience I obtained a certain <em>knowledge of anatomy, perspective and composition</em>. I am also fascinated about exploring art styles and expressing emotion. -->
             <h4>
-              <a href="/cv.pdf">My curriculum</a>
+              <a href="cv.pdf">My curriculum</a>
             </h4>
           </p>
           <!-- link to my cv -->
