--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
   <body>
     <nav class="navbar">
       <header >
-        <a class="navbar-header" href="/index.html">
+        <a class="navbar-header" href="index.html">
           <h1>
             Simona Dumascu
           </h1>
@@ -22,13 +22,13 @@
       </header>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="/index.html">Work</a>
+          <a class="nav-link" href="index.html">Work</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/about.html">About me</a>
+          <a class="nav-link" href="about.html">About me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/contact.html"><em>Contact</em></a>
+          <a class="nav-link" href="contact.html"><em>Contact</em></a>
         </li>
       </ul>
     </nav>
