--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <nav class="navbar">
     <header>
-      <a class="navbar-header" href="/index.html">
+      <a class="navbar-header" href="index.html">
         <h1>
           Simona Dumascu
         </h1>
@@ -21,20 +21,20 @@
     </header>
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="/index.html"><em>Work</em></a>
+        <a class="nav-link" href="index.html"><em>Work</em></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/about.html">About me</a>
+        <a class="nav-link" href="about.html">About me</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/contact.html">Contact</a>
+        <a class="nav-link" href="contact.html">Contact</a>
       </li>
     </ul>
   </nav>
   <main>
     <div class="flex-container">
       <div class="flex-image">
-        <img src="/images/character_design/8.jpg" alt="img">
+        <img src="images/character_design/8.jpg" alt="img">
         <figcaption>
           <h4>
             Character design
@@ -42,7 +42,7 @@
           <p>
             Collection of characters and illustrations in different styles and inspirations.
           </p>
-          <a href="/work/character_design.html">
+          <a href="work/character_design.html">
             <i>
               Show more
             </i>
@@ -50,14 +50,14 @@
         </figcaption>
       </div>
       <div class="flex-image">
-        <img src="/images/portraits/7.jpg" alt="img">
+        <img src="images/portraits/7.jpg" alt="img">
         <figcaption>
           <h4>
             Portraits
           </h4>
           <p>
             Sample of different commissions and personal work.          </p>
-          <a href="/work/portraits.html">
+          <a href="work/portraits.html">
             <i>
               Show more
             </i>
@@ -65,7 +65,7 @@
         </figcaption>
       </div>
       <div class="flex-image">
-        <img src="/images/enviroment/11.jpg" alt="img">
+        <img src="images/enviroment/11.jpg" alt="img">
         <figcaption>
           <h4>
             Enviromental Art
@@ -73,7 +73,7 @@
           <p>
             Design of enviromental art pieces and details.
           </p>
-          <a href="/work/enviroment.html">
+          <a href="work/enviroment.html">
             <i>
               Show more
             </i>
@@ -81,7 +81,7 @@
         </figcaption>
       </div>
       <div class="flex-image">
-        <img src="/images/thesis/5.jpg" alt="img">
+        <img src="images/thesis/5.jpg" alt="img">
         <figcaption>
           <h4>
             Thesis
@@ -89,7 +89,7 @@
           <p>
             A character design interpretation of the main characters from the novel Dune
           </p>
-          <a href="/work/thesis.html">
+          <a href="work/thesis.html">
             <i>
               Show more
             </i>
