--- a/work/portraits.html
+++ b/work/portraits.html
@@ -1,6 +1,6 @@
 <head>
-  <link rel="stylesheet" href="/navbar.css">
-  <link rel="stylesheet" href="/main.css">
+  <link rel="stylesheet" href="../navbar.css">
+  <link rel="stylesheet" href="../main.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <script defer src="/scroll.js"></script>
@@ -10,7 +10,7 @@
 <body>
   <nav class="navbar">
     <header>
-      <a class="navbar-header" href="/index.html">
+      <a class="navbar-header" href="../index.html">
         <h1>
           Simona Dumascu
         </h1>
@@ -21,41 +21,41 @@
     </header>
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="/index.html">Work</a>
+        <a class="nav-link" href="../index.html">Work</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/about.html">About me</a>
+        <a class="nav-link" href="../about.html">About me</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/contact.html">Contact</a>
+        <a class="nav-link" href="../contact.html">Contact</a>
       </li>
     </ul>
   </nav>
   <main>
     <div class="flex-container" style="gap: 1rem;">
       <div class="flex-image">
-        <img src="/images/portraits/1.jpg" alt="img">
+        <img src="../images/portraits/1.jpg" alt="img">
       </div>
       <div class="flex-image">
-        <img src="/images/portraits/8.jpg" alt="img">
+        <img src="../images/portraits/8.jpg" alt="img">
       </div>
       <div class="flex-image">
-        <img src="/images/portraits/2.jpg" alt="img">
+        <img src="../images/portraits/2.jpg" alt="img">
       </div>
       <div class="flex-image">
-        <img src="/images/portraits/3.jpg" alt="img">
+        <img src="../images/portraits/3.jpg" alt="img">
       </div>
       <div class="flex-image">
-        <img src="/images/portraits/4.jpg" alt="img">
+        <img src="../images/portraits/4.jpg" alt="img">
       </div>
       <div class="flex-image">
-        <img src="/images/portraits/5.jpg" alt="img">
+        <img src="../images/portraits/5.jpg" alt="img">
       </div>
       <div class="flex-image">
-        <img src="/images/portraits/6.jpg" alt="img">
+        <img src="../images/portraits/6.jpg" alt="img">
       </div>
       <div class="flex-image">
-        <img src="/images/portraits/7.jpg" alt="img">
+        <img src="../images/portraits/7.jpg" alt="img">
       </div>
     </div>
   </main>
